# collatz_escape_exact_model

./: .gitignore  ABOUT.md  CITATION.cff  MODEL.md  README.md  requirements.txt  results.md  setup.cfg
.github/workflows/: ci.yml
configs/: default.yaml
docs/: 00_foundations.md  00_start_here.md  01_theory.md  02_experiments.md  03_glossary.md  04_floquet_connection.md  references.md
figures/: fatou_attractors.csv  fatou_basin_measure.csv  sweep_metrics.csv
paper/: preprint.md
scripts/: Collatz_tetration_quasiparticles.py  MLE.py  Type_2_sector_invariants.py  adic_orbits.py  braid_diod.py  falseability.py  floquet_connection_check.py  kuramoto_powertower.py  newton_rampson.py  parity_gates.py  quasiparticle_TSI.py  signature_spectrum.py  tetration_boundaries.py
scripts/dynamical_zeta/: README.md  find_cycles.py  finite_product.py  scan_and_plot.py
scripts/figures/: tetration_boundaries_scan.csv  tetration_boundaries_summary.csv
src/collatzscape/: __init__.py  cli.py  fatou.py  maps.py  metrics.py  plot.py  simulate.py
tests/: test_import.py
