[metadata]
name = collatzscape
version = 0.1.0
description = Collatzscape: non-autonomous tetration with direction-dependent collapse
license = MIT

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    scipy
    matplotlib
    tqdm
    pyyaml

[options.packages.find]
where = src
